# PlatformaZaUcenje

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  testing.md
data/: courses.txt  users.txt
data/inbox/: nikola_nikola.txt  tiho_nikola.txt
include/: course.hpp  interface.hpp  message.hpp  user.hpp
src/: course.cpp  interface.cpp  main.cpp  message.cpp  user.cpp
util/: config.cpp  config.hpp  graph.cpp  graph.hpp  util.cpp  util.hpp
